src/app/todo/todo-item/todo-item.component.css
.todo-item {
  display: flex;
  justify-content: space-between;
}

.todo-item_content {
  display: flex;
  align-items: baseline;
  gap: rem;
  margin-right: 1rem;
}

.todo-item_content label {
  font-size: 0.85rem;
  cursor: default;
  user-select: none;
}

.todo-item_content input[type="checkbox"] {
  margin-right: 0.7rem;
  cursor: pointer;
  accent-color: #B5B5BA;
}

.todo-item_content label.completed {
  color: #B5B5BA;
  text-decoration: line-through;
}

.todo-item_edit{
  color: blue;
  width: 10px;
  width: fit-content;
}
.todo-item_delete {
  width: 10px;
  width: fit-content;
  color: red;
  background: none;
  border: none;
  cursor: pointer;
}


.fa-trash-alt:hover {
  color: rgba(65, 63, 63, 0.62);
}

